--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,92 @@
 table, th, td {
   border: 1px solid black;
 }
+
+* {
+  box-sizing: border-box;
+  background-color: purple;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+}
+
+p {
+  font-size: 16px;
+}
+
+button {
+  border-radius: 7px;
+  border: 5px solid white;
+}
+
+button:hover {
+  color: grey;
+  border: 5px solid grey;
+}
+
+
+
+.nav_links {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+
+.nav_links button {
+  display: inline-block;
+  font-size: 40px;
+  padding: 0px 2-px;
+}
+
+.nav_links a {
+  /* optional transition */
+}
+
+nav ul li {
+  margin-right: 20px;       /* Adds space between list items */
+}
+
+.table_div {
+  display: flex;
+  justify-content: center;
+}
+
+caption {
+  padding: 5px;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+}
+
+.css-question {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.js-question {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
+.js-button {
+  display: flex;
+  justify-content: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+code {
+  font-family: monospace;
+  background-color: grey; 
+}
+
+
