--- a/views/three.html
+++ b/views/three.html
@@ -1,1 +1,56 @@
+<!doctype html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Assignment 2</title>
+  <meta name="Homepage" content="Homepage">
+  <link rel="stylesheet" href="../styles.css?v=1.0">
+  <link rel="icon" href="resources/bitmap.svg" type="image/svg+xml">
+</head>
+
+<body>
+  <svg width="100%" height="300" version="1.1">
+    <rect width="100%" height="300"/>
+    <circle cx="0%" cy="50%" r="400" fill="yellow" stroke="black" fill-opacity="0.8" />
+    <circle cx="62%" cy="17%" r="9" fill = "lightgray" stroke="black" fill-opacity="90">
+      <animateMotion dur="50s" repeatCount="indefinite" path="M 100,100 A 100,50 0 0,0 300,100 A 100,50 0 0,0 100,100"/>
+    </circle>
+    <circle cx="75%" cy="40%" r="40" fill = "blue" stroke="black" fill-opacity="100" />
+     <svg x="74%" y="35%" width="100" height="100" viewBox="0 0 100 100">
+       <polygon cx="75%" cy="40%" points="0,0 -2,5 0,10 5,13 12,14 15,18 16,26 16,31 16,39 19,43 31,47 39,47 43,38 42,26 38,15 37,5 43,0 36,-7 23,-8 9,-7 4,-6 1,-4" fill="green"/>
+     </svg>
+     <text x="30%" y="20%" font-family="Verdana" font-size="55" fill="yellow" stroke="black" stroke-width="1">
+               Welcome to John's Website!
+     </text>
+    <svg>
+      <circle cx="30%" cy="40%" r="2" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="36%" cy="50%" r="3" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="47%" cy="63%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="97%" cy="21%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="67%" cy="10%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="88%" cy="98%" r="3" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="82%" cy="56%" r="2" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="54%" cy="20%" r="2" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="40%" cy="13%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="75%" cy="34%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="61%" cy="38%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="90%" cy="77%" r="2" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="70%" cy="88%" r="2" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="60%" cy="80%" r="3" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="36%" cy="70%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="59%" cy="44%" r="1" fill="white" stroke="black" fill-opacity="1" />
+      <circle cx="51%" cy="38%" r="1" fill="white" stroke="black" fill-opacity="1" />
+    </svg>
+    <nav class="menue">
+      <ul class="nav_links">
+      <li><a href="../index.html"><button>Homepage</button></a></li>
+      <li><a href="two.html"><button>Page 2</button></a></li>
+      <li><a href="three.html"><button>Page 3</button></a></li>
+      </ul>
+    </nav>
+  <h1>SVG Animation is easy!</h1>
+  <img src="../resources/page-three.svg" alt="description"/>
+</body>
+
+</html>
